@@ -5,6 +5,7 @@
 
 package org.mozilla.gecko.dlc;
 
+import android.annotation.SuppressLint;
 import android.content.Context;
 import android.support.annotation.IntDef;
 import android.util.Log;
@@ -16,6 +17,7 @@ import org.mozilla.gecko.dlc.catalog.DownloadContentCatalog;
 import org.mozilla.gecko.sync.Utils;
 import org.mozilla.gecko.util.HardwareUtils;
 import org.mozilla.gecko.util.IOUtils;
+import org.mozilla.gecko.util.ProxySelector;
 
 import java.io.BufferedInputStream;
 import java.io.File;
@@ -24,7 +26,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 public abstract class BaseAction {
     private static final String LOGTAG = "GeckoDLCBaseAction";
@@ -92,19 +95,21 @@ public abstract class BaseAction {
 
     protected File getDestinationFile(Context context, DownloadContent content)
             throws UnrecoverableDownloadContentException, RecoverableDownloadContentException {
+        File destinationDirectory;
         if (content.isFont()) {
-            File destinationDirectory = new File(context.getApplicationInfo().dataDir, "fonts");
-
-            if (!destinationDirectory.exists() && !destinationDirectory.mkdirs()) {
-                throw new RecoverableDownloadContentException(RecoverableDownloadContentException.DISK_IO,
-                        "Destination directory does not exist and cannot be created");
-            }
-
-            return new File(destinationDirectory, content.getFilename());
+            destinationDirectory = new File(context.getApplicationInfo().dataDir, "fonts");
+        } else if (content.isHyphenationDictionary()) {
+            destinationDirectory = new File(context.getApplicationInfo().dataDir, "hyphenation");
+        } else {
+            throw new UnrecoverableDownloadContentException("Can't determine destination for kind: " + content.getKind().toString());
         }
 
-        // Unrecoverable: We downloaded a file and we don't know what to do with it (Should not happen)
-        throw new UnrecoverableDownloadContentException("Can't determine destination for kind: " + content.getKind());
+        if (!destinationDirectory.exists() && !destinationDirectory.mkdirs()) {
+            throw new RecoverableDownloadContentException(RecoverableDownloadContentException.DISK_IO,
+                    "Destination directory does not exist and cannot be created");
+        }
+
+        return new File(destinationDirectory, content.getFilename());
     }
 
     protected boolean verify(File file, String expectedChecksum)
@@ -145,11 +150,10 @@ public abstract class BaseAction {
 
     protected HttpURLConnection buildHttpURLConnection(String url)
             throws UnrecoverableDownloadContentException, IOException {
-        // TODO: Implement proxy support (Bug 1209496)
         try {
             System.setProperty("http.keepAlive", "true");
 
-            HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
+            HttpURLConnection connection = (HttpURLConnection) ProxySelector.openConnectionWithProxy(new URI(url));
             connection.setRequestProperty("User-Agent", HardwareUtils.isTablet() ?
                     AppConstants.USER_AGENT_FENNEC_TABLET :
                     AppConstants.USER_AGENT_FENNEC_MOBILE);
@@ -157,6 +161,8 @@ public abstract class BaseAction {
             connection.setInstanceFollowRedirects(true);
             return connection;
         } catch (MalformedURLException e) {
+            throw new UnrecoverableDownloadContentException(e);
+        } catch (URISyntaxException e) {
             throw new UnrecoverableDownloadContentException(e);
         }
     }
